@@ -1,6 +1,7 @@
 == 0.0.2.alpha
 
 * Added features: sorting, searching, pagination, custom rendering
+* Change rake task to generators
 
 == 0.0.1.alpha
 
